[tool.poetry]
name = "caching-service"
version = "0.1.0"
description = ""
authors = ["Khaidzir Muhammad Shahih"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
